--- a/.drone.yml
+++ b/.drone.yml
@@ -18,18 +18,14 @@ pipeline:
 
   docker-build:
     image: ukhomeoffice/drone-docker
-    secrets: [ docker_password ]
-    username: '${DOCKER_USERNAME}'
     repo: '${DOCKER_REPO}/${DOCKER_PATH}/${NAME}'
-    registry: '${DOCKER_REPO}'
-    tags: latest
     dry_run: true
     when:
       event: pull_request
 
   docker-build-and-push:
     image: ukhomeoffice/drone-docker
-    secrets: [ docker_password, rk_url, rk_auth ]
+    secrets: [ docker_password ]
     username: '${DOCKER_USERNAME}'
     repo: '${DOCKER_REPO}/${DOCKER_PATH}/${NAME}'
     registry: '${DOCKER_REPO}'
@@ -42,3 +38,49 @@ pipeline:
     when:
       event: push
       branch: master
+
+  e2e_test:
+    image: '${DOCKER_REPO}/${DOCKER_PATH}/${NAME}'
+    secrets: [ service_now_username, service_now_password ]
+    description: 'End-to-end test for the ServiceNow drone plugin. Build #${DRONE_BUILD_NUMBER}'
+    when:
+      event: push
+      branch: master
+
+  notify_slack_success:
+    image: plugins/slack:1.0
+    secrets:
+      - SLACK_WEBHOOK
+    channel: general
+    username: Drone
+    icon_url: http://readme.drone.io/0.5/logo_dark.svg
+    icon.url: http://readme.drone.io/0.5/logo_dark.svg
+    template: >
+      *Successfully built {{repo.name}}* <{{build.link}}|#{{build.number}}>
+    when:
+      branch: master
+      event: push
+      status: success
+
+  notify_slack_failure:
+    image: plugins/slack
+    secrets:
+      - SLACK_WEBHOOK
+    channel: alerts
+    username: Drone
+    icon_url: http://readme.drone.io/0.5/logo_dark.svg
+    icon.url: http://readme.drone.io/0.5/logo_dark.svg
+    template: >
+      *Failed to build {{repo.name}}*
+
+      Author: {{build.author}}
+
+      Duration: {{since job.started}}
+      Job: <{{build.link}}|#{{build.number}}>
+
+      Commit: {{build.commit}}
+    when:
+      branch: master
+      event: push
+      status: failure
+
