Make sure plugin responds helpfully in all cases
There's a lot of potential for fail, so considerable effort has been made to abstract away the bizzare ServiceNow "REST" API oddities and try to instead provide more obvious error messages.

--- a/test/.eslintrc.yaml
+++ b/test/.eslintrc.yaml
@@ -1,6 +1,12 @@
 env:
   mocha: true
 globals:
+  describe: true
+  it: true
+  before: true
+  beforeAll: true
+  afterAll: true
+  after: true
   chai: true
   expect: true
   rewire: true
