bin declaration to help run module when installed

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "A `drone.io` plugin to connect the ServiceNow API to a CD pipeline.",
   "main": "index.js",
+  "bin": "./index.js",
   "scripts": {
     "start": "node .",
     "test": "npm-run-all -s lint cover check-coverage",
