--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "check-coverage": "istanbul check-coverage --statement 100 --branch 100 --function 100 --line 100",
     "watch:unit": "nodemon -w index.js -w config.js -w test -x 'npm-run-all -s lint cover'",
     "start:mock-api": "dyson test/snow-api-mock",
-    "stop:mock-api": "killall ServiceNow-mock-api"
+    "stop:mock-api": "killall ServiceNow-mock-api",
+    "version": "./.version.js && git add .drone.yml"
   },
   "repository": {
     "type": "git",
