Define test CI job separately to the image push

--- a/.drone.yml
+++ b/.drone.yml
@@ -21,6 +21,7 @@ pipeline:
   docker-build:
     image: ukhomeoffice/drone-docker
     repo: '${DOCKER_REPO}/${DOCKER_PATH}/${NAME}'
+    dockerfile: Dockerfile-test
     dry_run: true
     when:
       event: pull_request
