--- a/package.json
+++ b/package.json
@@ -43,15 +43,18 @@
     "istanbul": "^0.4.5",
     "mocha": "^5.0.0",
     "mock-fs": "^4.4.2",
-    "nodemon": "^1.14.12",
+    "nodemon": "^1.17.3",
     "npm-run-all": "^4.1.2",
     "proxyquire": "^1.8.0",
     "rewire": "^3.0.2",
+    "shelljs": "^0.8.1",
     "sinon": "^4.3.0",
     "sinon-chai": "^2.14.0"
   },
   "dependencies": {
     "moment": "^2.20.1",
-    "superagent": "^3.8.2"
+    "superagent": "^3.8.2",
+    "winston": "^3.0.0-rc5",
+    "yargs": "^11.0.0"
   }
 }
