--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "dependencies": {
     "moment": "^2.20.1",
     "superagent": "^3.8.2",
-    "winston": "^3.0.0-rc5",
+    "winston": "^3.0.0",
     "yargs": "^11.0.0"
   }
 }
