refactot(testing): update istanbul to nyc
The old test coverage module `istanbul` has been supplanted by `nyc`. Refactor to
remove the old module, and support the new incarnation instead.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node .",
     "test": "npm-run-all -s lint cover check-coverage",
     "lint": "eslint .",
-    "cover": "istanbul cover _mocha -- ./test",
-    "check-coverage": "istanbul check-coverage --statement 95 --branch 95 --function 100 --line 95",
+    "cover": "nyc mocha ./test",
+    "check-coverage": "nyc check-coverage --statement 95 --branch 95 --function 100 --line 95",
     "watch:unit": "nodemon -w index.js -w config.js -w test -x 'npm-run-all -s lint cover'",
     "start:mock-api": "dyson test/snow-api-mock",
     "stop:mock-api": "killall ServiceNow-mock-api",
@@ -40,11 +40,11 @@
     "eslint-plugin-filenames": "^1.2.0",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-one-variable-per-var": "0.0.3",
-    "istanbul": "^0.4.5",
     "mocha": "^8.1.1",
     "mock-fs": "^4.4.2",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.2",
+    "nyc": "^15.1.0",
     "proxyquire": "^1.8.0",
     "rewire": "^3.0.2",
     "shelljs": "^0.8.1",
