--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "npm-run-all -s lint cover check-coverage",
     "lint": "eslint .",
     "cover": "nyc mocha ./test",
-    "check-coverage": "nyc check-coverage --statement 95 --branch 95 --function 100 --line 95",
-    "watch:unit": "nodemon -w index.js -w config.js -w test -x 'npm-run-all -s lint cover'",
+    "check-coverage": "nyc check-coverage --statements 95 --branches 95 --functions 100 --lines 95",
+    "watch:unit": "nodemon -w index.js -w config.js -w test -x 'npm test'",
     "start:mock-api": "dyson test/snow-api-mock",
     "stop:mock-api": "killall ServiceNow-mock-api",
     "version": "./.version.js && git add .drone.yml"
