chore(linting): reduce linting warnings
Better describe the code style in the linter rules.
Slightly refactor code to address some valid warnings.

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -365,7 +365,7 @@ rules:
   array-bracket-spacing:
     - 1
     # enforce them to be "always" used when possible, or "never" used
-    - always
+    - never
   # require or disallow spaces inside parentheses
   space-in-parens:
     - 2
