chore(coverage): improve reporting and config
Move `nyc` configuration to the specific `.nycrc.json` file.
Add "watermark" definitions that match the code coverage expecations of
the project.
Ensure all files comply, don't just take the average.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npm-run-all -s lint cover check-coverage",
     "lint": "eslint .",
     "cover": "nyc mocha ./test",
-    "check-coverage": "nyc check-coverage --statements 95 --branches 95 --functions 100 --lines 95",
+    "check-coverage": "nyc check-coverage",
     "watch:unit": "nodemon -w src -w test -x 'npm test'",
     "start:mock-api": "dyson test/snow-api-mock",
     "stop:mock-api": "killall ServiceNow-mock-api",
