fix(tests): separate mocks and tests
When Mocha runs on GitHub Actions, it tries to run the mock files to
look for tests... this triggers a syntax error. Instead, separate the
tests into their own directory, so that they can be treated in isolation
by Mocha.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node .",
     "test": "npm-run-all -s lint cover check-coverage",
     "lint": "eslint .",
-    "cover": "nyc mocha ./test",
+    "cover": "nyc mocha ./test/unit",
     "check-coverage": "nyc check-coverage",
     "watch:unit": "nodemon -w src -w test -x 'npm test'",
     "start:mock-api": "dyson test/snow-api-mock",
