--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snowtify",
-  "version": "0.3.1",
+  "version": "0.3.2-development",
   "description": "A `drone.io` plugin to connect the ServiceNow API to a CD pipeline.",
   "main": "src/index.js",
   "bin": "./snowtify.js",
@@ -14,11 +14,12 @@
     "start:mock-api": "dyson test/snow-api-mock",
     "stop:mock-api": "killall ServiceNow-mock-api",
     "version": "./.version.js && git add .drone.yml",
-    "postinstall": "git config core.hooksPath .githooks"
+    "postinstall": "git config core.hooksPath .githooks",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/UKHomeOffice/snowtify.git"
+    "url": "https://github.com/UKHomeOffice/snowtify.git"
   },
   "keywords": [
     "drone",
@@ -36,7 +37,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-json": "github:RobinKnipe/chai-json",
-    "commitizen": "^4.2.1",
+    "commitizen": "^4.1.2",
     "cz-conventional-changelog": "^3.2.0",
     "dyson": "^3.0.3",
     "eslint": "^4.17.0",
@@ -52,7 +53,8 @@
     "rewire": "^3.0.2",
     "shelljs": "^0.8.1",
     "sinon": "^4.3.0",
-    "sinon-chai": "^2.14.0"
+    "sinon-chai": "^2.14.0",
+    "semantic-release": "^17.1.1"
   },
   "dependencies": {
     "moment": "^2.20.1",
